<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/filters_form"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        style="@style/AppTheme.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/header_filters" />

    <!-- Grade level -->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/icon_grade"
            style="@style/AppTheme.FilterIcon"
            android:layout_centerVertical="true"
            android:tint="@color/greySecondary"
            app:srcCompat="@drawable/ic_album" />

        <Spinner
            android:id="@+id/spinner_grade"
            style="@style/AppTheme.FilterSpinner"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/icon_grade"
            android:entries="@array/grades" />

    </RelativeLayout>

    <!-- Subjects -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/icon_subjects"
            style="@style/AppTheme.FilterIcon"
            android:layout_centerVertical="true"
            android:tint="@color/greySecondary"
            app:srcCompat="@drawable/ic_album" />

        <Spinner
            android:id="@+id/spinner_subjects"
            style="@style/AppTheme.FilterSpinner"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/icon_subjects"
            android:entries="@array/subjects" />

    </RelativeLayout>

    <!-- Gender -->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/icon_gender"
            style="@style/AppTheme.FilterIcon"
            android:layout_centerVertical="true"
            android:tint="@color/greySecondary"
            app:srcCompat="@drawable/ic_album" />

        <Spinner
            android:id="@+id/spinner_gender"
            style="@style/AppTheme.FilterSpinner"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/icon_gender"
            android:entries="@array/genders" />

    </RelativeLayout>

    <!-- Type (i.e tutor vs student) -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/icon_type"
            style="@style/AppTheme.FilterIcon"
            android:layout_centerVertical="true"
            android:tint="@color/greySecondary"
            app:srcCompat="@drawable/ic_album" />

        <Spinner
            android:id="@+id/spinner_type"
            style="@style/AppTheme.FilterSpinner"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/icon_type"
            android:entries="@array/types" />

    </RelativeLayout>

    <!-- Sort by -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/icon_sort"
            style="@style/AppTheme.FilterIcon"
            android:layout_centerVertical="true"
            android:tint="@color/greySecondary"
            app:srcCompat="@drawable/ic_album" />

        <Spinner
            android:id="@+id/spinner_sort"
            style="@style/AppTheme.FilterSpinner"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/icon_sort"
            android:entries="@array/sort_by" />
    </RelativeLayout>

    <!-- Cancel and apply buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_cancel"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/greySecondary"
            android:theme="@style/ThemeOverlay.FilterButton" />


        <Button
            android:id="@+id/button_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/apply"
            android:theme="@style/ThemeOverlay.FilterButton" />

    </LinearLayout>

</LinearLayout>

